# catdex

./: .gitignore  Cargo.toml  LICENSE  README.md
catdex/: Cargo.toml
catdex-api/: Cargo.toml
catdex-api/migrations/2022-07-07-204807_catdex_api/: down.sql  up.sql
catdex-api/src/: main.rs
catdex-api/static/: add.html  index.css  index.html
catdex/src/: models.rs
echo-server/: Cargo.toml
echo-server/client/: index.html  index.js
echo-server/src/: main.rs
migrations/2022-07-04-001706_create_cats/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
static/: add.html  cat.html  index.html
static/css/: index.css
