[package]
name = "catdex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.1"
actix-web = "4.1.0"
serde_json = "1.0.53"
handlebars = { version = "3.0.1", features = ["dir_source"] }
