[package]
name = "catdex-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.1"
serde = {version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
r2d2 = "0.8.8"
awmp = { version = "0.8", default-features = false, features = ["v4"] }
actix-rt = "2.7.0"
validator = "0.15.0"
validator_derive = "0.15.0"
